# gcc-visibility-test

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  MyClass.cpp  MyClass.hpp
tests/: CMakeLists.txt  test.cpp
